fix: display bug on mobile nav, if there is no cta

--- a/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
+++ b/wordpress/wp-content/themes/les-verts/styleguide/src/components/molecules/m-menu/m-menu.scss
@@ -54,11 +54,11 @@
 		display: inline-block;
 		@include fluid-props(margin-left, $size-medium, $size-huge, 24px, 55px);
 		float: right;
-		margin-top: 11px;
+		margin: 11px 0;
 
 		@include media($_DESKTOP) {
 			float: none;
-			margin-top: 0;
+			margin: 0;
 		}
 	}
 
@@ -119,6 +119,14 @@
 
 				.m-menu__hamburger {
 					@include fluid-props(top, $size-medium, $grid-max-width-max, -133px, -135px);
+				}
+			}
+
+			&--no-menu-right.is-open {
+				top: 80px;
+
+				.m-menu__hamburger {
+					top: -53px;
 				}
 			}
 		}
